--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.5",
     "express": "^4.15.2",
-    "socket.io": "^4.1.2"
+    "socket.io": "^4.1.2",
+    "typescript": "^4.3.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
     "@types/socket.io": "^3.0.2",
     "got": "^11.3.0",
     "tape": "^4.7.0",
-    "tslint": "^6.1.3",
-    "typescript": "^4.3.4"
+    "tslint": "^6.1.3"
   },
   "keywords": [
     "node",
